Added knotx config and mocks. Added tuning details