@@ -18,7 +18,7 @@ During our tests, we focus on the following metrics which, when correlated, allo
 * Application resources (jmx heap size, garbage collections).
 
 ### KPIs
-* 1 second for response time (90%Line).
+* 1 second for response time (90% Line).
 * Error occurrences.
 * Stability:
     * No memory leaks.
@@ -27,12 +27,8 @@ During our tests, we focus on the following metrics which, when correlated, allo
     * Application resources OK.
 	
 ## Test Environment
-Whole Test Environment is set up on AWS Cloud.
-<p align="center">
-  <img align="center"
-    src="https://github.com/Cognifide/knotx/blob/master/documentation/src/main/wiki/assets/knotx-test-environment.png?raw=true"
-    alt="Basic request flow"/>
-</p>
+Test Environment is set up on AWS Cloud.
+![Test environment](assets/knotx-test-environment.png)
 
 ### System under test
 * 1 x Apache - c4.large, 2CPU, 4GB RAM, 500Mbps bandwidth,centos 6.8.
@@ -40,13 +36,22 @@ Whole Test Environment is set up on AWS Cloud.
 * 1 x Mocks - c4.large, 2CPU, 4GB RAM, 500Mbps bandwidth,centos 6.8.
 * 1 x AEM - c4.xlarge, 4CPU, 8GB RAM, 750Mbps bandwidth.centos 6.8.
 
+### Knotx author
+java -Dlogback.configurationFile=/content/knotx/author/logback.xml -Dvertx.cacheDirBase=/content/knotx/author/.vertx -Xms1024m -Xmx2048m -XX:ReservedCodeCacheSize=128m -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=18092 -Dcom.sun.management.jmxremote.rmi.port=18092 -Djava.rmi.server.hostname=10.254.165.236 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Xloggc:/content/logs/knotx/gc.log -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=5M -jar /content/knotx/author/knotx.jar -conf /content/knotx/author/config/author-config.json
+
+### Knotx publish
+java -Dlogback.configurationFile=/content/knotx/publish/logback.xml -Dvertx.cacheDirBase=/content/knotx/publish/.vertx -Xms1024m -Xmx2048m -XX:ReservedCodeCacheSize=128m -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=18093 -Dcom.sun.management.jmxremote.rmi.port=18093 -Djava.rmi.server.hostname=10.254.165.236 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Xloggc:/content/logs/knotx/gc.log -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=5M -jar /content/knotx/publish/knotx.jar -conf /content/knotx/publish/config/publish-config.json
+
+### Knotx mocks
+java -Dlogback.configurationFile=/content/knotx/mocks/logback.xml -Dvertx.cacheDirBase=/content/knotx/mocks/.vertx -Xms1024m -Xmx2048m -XX:ReservedCodeCacheSize=128m -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=19000 -Dcom.sun.management.jmxremote.rmi.port=19000 -Djava.rmi.server.hostname=10.254.165.163 -Dcom.sun.management.jmxremote.ssl=false -Dcom.sun.management.jmxremote.authenticate=false -Xloggc:/content/logs/knotx/gc.log -XX:+PrintGCApplicationStoppedTime -XX:+PrintGCApplicationConcurrentTime -XX:+PrintGC -XX:+PrintGCTimeStamps -XX:+PrintGCDetails -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=5M -jar /content/knotx/mocks/knotx.jar -conf /content/knotx/mocks/config/mocks-config.json
+
 ### Test harness
 * 1 x Jmeter Master - c4.xlarge, 4CPU, 8GB RAM, 750Mbps bandwidth,centos 6.8.
 * 2 x Jmeter Servers - c4.xlarge, 4CPU, 8GB RAM, 750Mbps bandwidth,centos 6.8.
 
 ### Repositories
-* mocks-knotx - https://stash.cognifide.com/projects/OCTPI/repos/mocks-knotx/browse
-* config-knotx - https://stash.cognifide.com/projects/OCTPI/repos/config-knotx/browse
+* mocks-knotx - \knotx-performance-tests\config-knotx\
+* config-knotx - \knotx-performance-tests\mocks-knotx\
 
 ## Tools
 * JMeter 3.1 with plugins (at AWS) as a Load Generator.
@@ -67,14 +72,13 @@ Test process that we used is based on Microsoft Performance testing process - ht
 
 ## Execution
 * Jmeter run in Distribute Mode (Remote).
-* Restart all servers before tests (Apache Front, Knot.x, Mocks, JMeter machines).
+* Restart all servers before tests (Apache HTTP Server, Knot.x, Mocks, JMeter machines).
 * Verify no network traffic on servers (via Zabbix).
 * Verify no CPU Utilization on Servers (via Zabbix).
 * Open tested page in browser - open and data OK.
 * Warm-up for 5 minutes - no errors.
 * Wait for cool down.
 * Execute tests.
-
 
 ## Logging/Monitoring
 * .csv Simple Data Writer.
